--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -65,7 +65,7 @@ h4 {
   font-size: clamp(18px, 2vw, 20px);
 }
 p {
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.6;
   color: $textColor;
   font-family: "Muli", sans-serif;
