--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,6 +130,56 @@
 
 // =============== product card end ==========
 
+.cyber-testimony-single {
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  p {
+    font-size: 15px;
+    color: #4e4e4e;
+    margin: 15px 0px 11px;
+    position: relative;
+    &::before {
+      content: "\201c";
+      position: absolute;
+      left: -40px;
+      top: 0;
+      font-size: 100px;
+      line-height: 0;
+      color: #0000005c;
+    }
+    &::after {
+      content: "\201d";
+      position: absolute;
+      right: -40px;
+      bottom: -35px;
+      font-size: 100px;
+      line-height: 0;
+      color: #0000005c;
+    }
+  }
+  & > h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #4a4a4a;
+  }
+  & > h6 {
+    font-size: 16px;
+    color: #4e4e4e;
+    font-weight: 400;
+  }
+}
+.cyber-testimony-single-img {
+  text-align: center;
+  padding: 10px 0px;
+  img {
+    display: inline !important;
+    width: 100px !important;
+    height: 100px;
+    border-radius: 50%;
+  }
+}
+
 // ==================faq ==================
 .faq {
   .faq_accordian {
