--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -27,7 +27,7 @@ html {
 body {
   // font-family: "Muli", sans-serif;
   font-family: "Rajdhani", sans-serif;
-  max-width: 2000px;
+  max-width: 2400px;
   margin: auto;
   // background-color: #f2f5f9;
 }
@@ -163,6 +163,7 @@ p {
   font-weight: 500;
   font-size: 16px;
   font-family: "Muli", sans-serif;
+  border: none;
   svg {
     max-width: 0;
     max-height: 0;
